starting to build the website using divs instead of tables

--- a/index.html
+++ b/index.html
@@ -9,60 +9,15 @@
 </head>
 <body>
 
-    <table border="0px" width="900" align="left">
+   <div id="principal">
+        
+        <img src="imagens/capa.png" alt="">
 
-        <tr>
-            <td>
-                <img src="imagens/capa.png" alt="">
-            </td>
-        </tr>
+        <div id="menu">
+            menu
+        </div>
 
-        <tr>
+   </div>
 
-            <td>
-                <ul>
-                    <a href="">HOME</a> |
-                    <a href="biografia.html">BIOGRAFIA</a> |
-                    <a href="campanhas.html">CAMPANHAS PUBLICITÁRIAS</a> |
-                    <a href="contato.html">CONTATO</a>
-                </ul>
-            </td>
-        </tr>
-
-        <tr class="caixa-texto">
-            <td>
-
-                <h1 class="titulo">Sobre Anna Bella</h1>
-
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam fringilla 
-                    imperdiet commodo. Proin sed magna nisl. Fusce ut nunc efficitur, commodo 
-                    acus ornare, suscipit mi. Etiam rutrum felis ligula, et hendrerit est iaculis id. 
-                    Etiam tellus nunc, facilisis sit amet interdum id, rutrum eu velit. Maecenas condimentum 
-                    est sed sapien aliquam gravida. In eget ullamcorper lectus. Maecenas in volutpat tellus. 
-                    Nam malesuada dapibus ante, et ornare dolor tempus sit amet.
-                </p>
-            
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam fringilla 
-                    imperdiet commodo. Proin sed magna nisl. Fusce ut nunc efficitur, commodo 
-                    acus ornare, suscipit mi. Etiam rutrum felis ligula, et hendrerit est iaculis id. 
-                    Etiam tellus nunc, facilisis sit amet interdum id, rutrum eu velit. Maecenas condimentum 
-                    est sed sapien aliquam gravida. In eget ullamcorper lectus. Maecenas in volutpat tellus. 
-                    Nam malesuada dapibus ante, et ornare dolor tempus sit amet.
-                </p>
-
-            </td>    
-
-        </tr>
-
-        <tr>
-            <td>
-                <h4 align="center">Todos os direitos reservados.</h4>
-            </td>
-        </tr>
-
-    </table>
- 
 </body>
 </html>
