website project finished

--- a/campanhas-publicitarias.html
+++ b/campanhas-publicitarias.html
@@ -1,36 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anna Bella | CAMPANHAS PUBLICITÁRIAS</title>
-    <link rel="stylesheet" type="text/css" href="estilo.css">
-</head>
-<body>
 
-    <table border="0px" width="900" align="left">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Anna Bella | CAMPANHAS PUBLICITÁRIAS</title>
+        <link rel="stylesheet" type="text/css" href="estilo.css">
+    </head>
 
-        <tr>
-            <td>
-                <img src="imagens/capa.png" alt="">
-            </td>
-        </tr>
+    <body>
 
-        <tr>
+        <div id="principal">
+                
+            <img src="imagens/capa.png">
 
-            <td>
-                <ul>
-                    <a href="index.html">HOME</a> |
-                    <a href="biografia.html">BIOGRAFIA</a> |
-                    <a href="">CAMPANHAS PUBLICITÁRIAS</a> |
-                    <a href="contato.html">CONTATO</a>
-                </ul>
-            </td>
-        </tr>
+            <div id="menu">
+                <a href="index.html">HOME</a> | 
+                <a href="biografia.html">BIOGRAFIA</a> | 
+                <a href="campanhas-publicitarias.html">CAMPANHAS 
+                    PUBLICITÁRIAS</a> | 
+                <a href="contato.html">CONTATO</a> | 
+            </div>
 
-        <tr class="caixa-texto">
-            <td>
+            <div id = "conteudo"> <!-- inicio conteúdo -->
 
                 <h1 class="titulo">Campanhas publicitárias</h1>
 
@@ -43,7 +36,7 @@
                     Nam malesuada dapibus ante, et ornare dolor tempus sit amet.
                 </p>
 
-                <img src="imagens/foto1.png" alt="">
+                <img src="imagens/foto1.png" class="img-campanha">
 
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam fringilla 
@@ -54,7 +47,7 @@
                     Nam malesuada dapibus ante, et ornare dolor tempus sit amet.
                 </p>
 
-                <img src="imagens/foto2.png" alt="">
+                <img src="imagens/foto2.png" class="img-campanha">
 
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam fringilla 
@@ -65,19 +58,25 @@
                     Nam malesuada dapibus ante, et ornare dolor tempus sit amet.
                 </p>
 
-                <img src="imagens/foto3.png" alt="">
+                <img src="imagens/foto3.png" class="img-campanha">
 
-            </td>    
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam fringilla 
+                    imperdiet commodo. Proin sed magna nisl. Fusce ut nunc efficitur, commodo 
+                    acus ornare, suscipit mi. Etiam rutrum felis ligula, et hendrerit est iaculis id. 
+                    Etiam tellus nunc, facilisis sit amet interdum id, rutrum eu velit. Maecenas condimentum 
+                    est sed sapien aliquam gravida. In eget ullamcorper lectus. Maecenas in volutpat tellus. 
+                    Nam malesuada dapibus ante, et ornare dolor tempus sit amet.
+                </p>
 
-        </tr>
+            </div><!-- fim conteúdo -->
 
-        <tr>
-            <td>
-                <h4 align="center">Todos os direitos reservados.</h4>
-            </td>
-        </tr>
+            <div id="rodape">
+                <h4>Todos os direitos reservados</h4>
+            </div>
 
-    </table>
- 
-</body>
+        </div>
+
+    </body>
+    
 </html>
